# ciot_c

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  Doxyfile  Makefile  TODO.md  changes  changes.md  ciot.bat  ciot_ext.tag  library.json
.github/workflows/: pipeline.yml
common/: Common.cmake  common.mk
doc/html/: ciot__ble_8h.html  ciot__ble_8h_source.html  ciot__ble__scn_8h.html  ciot__ble__scn_8h.js  ciot__ble__scn__types_8h_source.html  ciot__ble__types_8h.html  ciot__ble__types_8h.js  ciot__bridge_8h_source.html  ciot__common__types_8h.js  ciot__config_8h.html  ciot__crc_8h.html  ciot__data__model__types_8h.html  ciot__data__model__types_8h.js  ciot__data__model__types_8h_source.html  ciot__dfu_8h.html  ciot__dfu_8h.js  ciot__dfu_8h_source.html  ciot__dfu__types_8h.html  ciot__dfu__types_8h.js  ciot__dfu__types_8h_source.html  ciot__err_8h.html  ciot__err_8h_source.html  ciot__eth_8h_source.html  ciot__gpio_8h.html  ciot__gpio_8h_source.html  ciot__gpio__types_8h.html  ciot__gpio__types_8h.js  ciot__gpio__types_8h_source.html  ciot__httpc_8h.js  ciot__httpc_8h_source.html  ciot__httpc__types_8h_source.html  ciot__https_8h.html  ciot__https_8h.js  ciot__https_8h_source.html  ciot__https__types_8h.html  ciot__https__types_8h.js  ciot__https__types_8h_source.html  ciot__iface_8h.html  ciot__iface_8h.js  ciot__iface_8h_source.html  (+237 more)
doc/latex/: annotated.tex  ciot_8h.tex  ciot__ble_8h.tex  (+153 more)
docs/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  ble_8pb-c_8c.html  ble_8pb-c_8c.js  ble_8pb-c_8h.html  ble_8pb-c_8h.js  ble_8pb-c_8h_source.html  ble__scn_8pb-c_8c.html  ble__scn_8pb-c_8c.js  ble__scn_8pb-c_8h.html  ble__scn_8pb-c_8h.js  ble__scn_8pb-c_8h_source.html  ciot_8h.html  ciot_8h.js  ciot_8h_source.html  ciot_8pb-c_8c.html  ciot_8pb-c_8c.js  ciot_8pb-c_8h.html  ciot_8pb-c_8h.js  ciot_8pb-c_8h_source.html  ciot__ble_8h.html  ciot__ble_8h.js  ciot__ble_8h_source.html  ciot__ble__scn_8h.html  ciot__ble__scn_8h_source.html  ciot__ble__scn__types_8h.html  ciot__ble__scn__types_8h.js  ciot__ble__types_8h.html  ciot__ble__types_8h_source.html  ciot__bridge_8h.html  ciot__bridge_8h.js  ciot__bridge_8h_source.html  ciot__bridge__types_8h.html  ciot__bridge__types_8h_source.html  ciot__common__types_8h.html  ciot__config_8h.js  ciot__crc_8h.js  ciot__crc_8h_source.html  ciot__default_8h.html  (+632 more)
examples/cli/: CMakeLists.txt  CMakelists.txt  ciot_cli.c  ciot_cli_conn.c  ciot_cli_mqttc.c  ciot_cli_ota.c  ciot_cli_sys.c  ciot_cli_wifi.c  ciot_cmd.c  ciot_cmd.h  main.c  main.h
examples/cli/include/: ciot_cli.h  ciot_cli_conn.h  ciot_cli_default.h  ciot_cli_mqttc.h  ciot_cli_ota.h  ciot_cli_sys.h  ciot_cli_wifi.h
examples/cli/parsers/: ciot_parser.c  ciot_parser.h  common.c  common.h  create_parser.c  create_parser.h  get_parser.c  get_parser.h  http_client_parser.c  http_client_parser.h  mqtt_client_parser.c  mqtt_client_parser.h  msg_data_parser.c  msg_data_parser.h  ota_parser.c  ota_parser.h  sys_parser.c  sys_parser.h  uart_parser.c  uart_parser.h
examples/esp32/main/: CMakeLists.txt  ciot_custom_config.h  main.c  main.h
examples/esp8266/main/: CMakeLists.txt  ciot_custom_config.h  component.mk  main.c  main.h
examples/iot_device/: CMakeLists.txt
examples/iot_device/main/: CMakeLists.txt  iot_device.c  main.c
examples/iot_device/main/config/: ciot_custom_config.h  ciot_custom_config_win.h
examples/iot_device/main/include/: iot_device.h
examples/mbus_client/main/: CMakeLists.txt  main.c  main.h
examples/nrf_dfu_master/: CMakeLists.txt  ciot_custom_config.h  main.c  main.h  readme.md
examples/nrf_dfu_master/main/: CMakeLists.txt  main.c
examples/opcua_server/: CMakeLists.txt  base_server.c  my_server.c  my_server.h
examples/uart/: CMakeLists.txt  CMakelists.txt  ciot_custom_config.h  main.c  main.h
examples/uart_bridge/: CMakeLists.txt  ciot_custom_config.h  main.c
examples/win32/: CMakeLists.txt  ciot_custom_config.h  main.c
include/: ciot.h  ciot_ble.h  ciot_ble_adv.h  ciot_ble_scn.h  ciot_ble_scn_types.h  ciot_ble_types.h  ciot_bridge.h  ciot_bridge_types.h  ciot_ca_crt_all.h  ciot_common_types.h  ciot_config.h  ciot_crc.h  ciot_crypt.h  ciot_data_model_types.h  ciot_decoder.h  ciot_decoder_s.h  ciot_decoder_slip.h  ciot_default.h  ciot_dfu.h  ciot_dfu_nrf.h  ciot_err.h  ciot_eth.h  ciot_event.h  ciot_gpio.h  ciot_http_client.h  ciot_http_server.h  ciot_httpc.h  ciot_httpc_types.h  ciot_https.h  ciot_https_types.h  ciot_iface.h  ciot_ifaces.h  ciot_lib.h  ciot_log.h  ciot_logger.h  ciot_mbus.h  ciot_mbus_client.h  ciot_mbus_server.h  ciot_model.h  ciot_mqtt_client.h  (+40 more)
main/: CMakeLists.txt  ciot.c  ciot.h  ciot_config.h  ciot_err.c  ciot_err.h  ciot_log.h  ciot_s.c  ciot_s.h  main.c
main/data/: ciot_ble_data.h  ciot_data_model.h  ciot_httpc_data.h  ciot_https_data.h  ciot_mqttc_data.h  ciot_msg_data.h  ciot_sys_data.h  ciot_uart_data.h
main/infra/: ciot_eth.h  ciot_httpc.h  ciot_https.h  ciot_mqttc.h  ciot_ntp.h  ciot_ota.h  ciot_s.h  ciot_storage.h  ciot_sys.h  ciot_tcp.h  ciot_uart.h  ciot_usb.h  ciot_wifi.h
main/infra/common/: ciot_s.c
main/infra/idf/: ciot_eth.c  ciot_httpc.c  ciot_https.c  ciot_mqttc.c  ciot_ntp.c  ciot_ota.c  ciot_sys.c  ciot_tcp.c  ciot_uart.c  ciot_wifi.c
main/infra/mg/: ciot_eth.c  ciot_httpc.c  ciot_https.c  ciot_mqttc.c  ciot_ntp.c  ciot_ota.c  ciot_storage.c  ciot_sys.c  ciot_tcp.c  ciot_uart.c  ciot_uart_win.c  ciot_wifi.c
main/infra/nrf/: ciot_sys.c  ciot_uart.c  ciot_uart_fifo.c  ciot_usb.c
main/interfaces/: ciot_iface.c  ciot_iface.h
main/types/: ciot_httpc_data.h  ciot_https_data.h  ciot_mqttc_data.h  ciot_msg_data.h  ciot_ntp_data.h  ciot_storage_data.h  ciot_sys_data.h  ciot_uart_data.h  ciot_usb_data.h  ciot_wifi_data.h
scripts/: ciot_cli.py  ciot_connection.py  release.py
src/: ciot.c  ciot.h  ciot_config.h  ciot_err.h  main.c
tests/: CMakeLists.txt  ciot_custom_config.h  ciot_custom_config_win.h  expected_data.h  integration_test.c  main.c  serialization_test.c
tests/common/: ciot_crypt_test.c  ciot_decoder_s_test.c  ciot_decoder_slip_test.c  ciot_decoder_test.c
(+848 files in other folders)
