cmake_minimum_required(VERSION 3.5)

if(DEFINED ENV{IDF_PATH})
    message("Compiling for esp32...")
    include($ENV{IDF_PATH}/tools/cmake/project.cmake)
    project(iot_device)
elseif (UNIX)
    message("Compiling for linux...")
    project(iot_device)
    add_subdirectory(main)
elseif (WIN32)
    message("Compiling for windows...")
    project(iot_device)
    add_subdirectory(main)
endif()
