cmake_minimum_required(VERSION 3.5)

if(DEFINED ENV{IDF_PATH})
    message("Compiling for esp32...")
    include($ENV{IDF_PATH}/tools/cmake/project.cmake)
    project(nrf_dfu_master)
elseif (UNIX)
    message("Compiling for linux...")
    project(nrf_dfu_master)
    add_subdirectory(main)
elseif (WIN32)
    message("Compiling for windows...")
    project(nrf_dfu_master)
    add_subdirectory(main)
endif()
